added testcase verification

--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ SECRET="OKYwOTGvOZB3Kxnsw4vT"
 CLIENT_ID="NlkhAVs8YLBMWlai5ooQIIXEiSxJ5TfD"
 issueBaseURL="https://dev-75u0gzvq2kz8rrir.us.auth0.com"
 baseURL="http://localhost:5173"
-DATABASE_URI="mongodb+srv://Aryan:Amongodb%40008@jobidcluster.vnwo3fl.mongodb.net/?retryWrites=true&w=majority"
-DATABASE = mongodb+srv://Siddhesh:<PASSWORD>@elitecode.bwty82y.mongodb.net/Problems?retryWrites=true&w=majority
-DATABASE_PASSWORD = p4PEpoTG1XBpsuWy
+# DATABASE_URI="mongodb+srv://Aryan:Amongodb%40008@jobidcluster.vnwo3fl.mongodb.net/?retryWrites=true&w=majority"
+# DATABASE = mongodb+srv://Siddhesh:<PASSWORD>@elitecode.bwty82y.mongodb.net/Problems?retryWrites=true&w=majority
+# DATABASE_PASSWORD = p4PEpoTG1XBpsuWy
+URI =postgresql://neondb_owner:y1RtkFbnci0Z@ep-mute-morning-a1nna4p5-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
